--- a/index.html
+++ b/index.html
@@ -1,11 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GI Celebration</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: black;
+            color: gold;
+        }
+
+        header {
+            padding: 20px;
+            text-align: center;
+            background: black;
+            border-bottom: 2px solid gold;
+        }
+
+        header h1 {
+            margin: 0;
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            background: black;
+        }
+
+        nav ul li {
+            margin: 0 15px;
+        }
+
+        nav ul li a {
+            text-decoration: none;
+            color: gold;
+            font-weight: bold;
+        }
+
+        nav ul li a:hover {
+            text-decoration: underline;
+        }
+
+        .hero {
+            text-align: center;
+            padding: 100px 20px;
+        }
+
+        .hero h2 {
+            font-size: 2.5em;
+            margin: 0;
+        }
+
+        .hero p {
+            font-size: 1.2em;
+        }
+
+        .section {
+            padding: 50px 20px;
+        }
+
+        .section h2 {
+            text-align: center;
+            margin-bottom: 20px;
+            font-size: 2em;
+        }
+
+        .contact-form {
+            max-width: 600px;
+            margin: 0 auto;
+        }
+
+        .contact-form label {
+            display: block;
+            margin-bottom: 5px;
+        }
+
+        .contact-form input,
+        .contact-form textarea {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 15px;
+            border: 1px solid gold;
+            background: black;
+            color: gold;
+        }
+
+        .contact-form button {
+            padding: 10px 20px;
+            background: gold;
+            border: none;
+            color: black;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        .contact-form button:hover {
+            background: #d4af37;
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            background: black;
+            border-top: 2px solid gold;
+        }
+    </style>
 </head>
+
 <body>
-    
+    <header>
+        <h1>GI Celebration</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+    <div class="hero" id="home">
+        <h2>Welcome to GI Celebration</h2>
+        <p>For the event of your dream</p>
+    </div>
+    <section class="section" id="about">
+        <h2>About Us</h2>
+        <p>GI Celebration specializes in event decoration and shamiyana services for weddings, parties, and feasts. We
+            bring your dream events to life with our elegant designs and meticulous attention to detail.</p>
+    </section>
+    <section class="section" id="services">
+        <h2>Our Services</h2>
+        <ul>
+            <li>Event Decoration</li>
+            <li>Shamiyana Setup</li>
+            <li>Lighting and Ambiance Design</li>
+            <li>Custom Event Themes</li>
+        </ul>
+    </section>
+    <section class="section" id="contact">
+        <h2>Contact Us</h2>
+        <form class="contact-form">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="message">Message</label>
+            <textarea id="message" name="message" rows="5" required></textarea>
+
+            <button type="submit">Send</button>
+        </form>
+    </section>
+    <footer>
+        <p>&copy; 2024 GI Celebration. All rights reserved.</p>
+    </footer>
 </body>
+
 </html>
