--- a/testing.html
+++ b/testing.html
@@ -4,8 +4,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>GI Celebration</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        :root {
+            --gold-gradient: linear-gradient(45deg, #d4af37, #ffd700, #ffcc00);
+        }
+
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: black;
+            color: gold;
+        }
+
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px;
+            background: black;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 1.8em;
+            background: var(--gold-gradient);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: flex-end;
+        }
+
+        nav ul li {
+            margin: 0 15px;
+        }
+
+        nav ul li a {
+            text-decoration: none;
+            color: gold;
+            font-weight: bold;
+        }
+
+        nav ul li a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 
 <body>
@@ -20,16 +70,16 @@
             </ul>
         </nav>
     </header>
-    <div class="hero space" id="home">
+    <div class="hero" id="home">
         <h2>Welcome to GI Celebration</h2>
         <p>For the event of your dream</p>
     </div>
-    <section class="section space" id="about">
+    <section class="section" id="about">
         <h2>About Us</h2>
         <p>GI Celebration specializes in event decoration and shamiyana services for weddings, parties, and feasts. We
             bring your dream events to life with our elegant designs and meticulous attention to detail.</p>
     </section>
-    <section class="section space" id="services">
+    <section class="section" id="services">
         <h2>Our Services</h2>
         <ul>
             <li>Event Decoration</li>
@@ -38,7 +88,7 @@
             <li>Custom Event Themes</li>
         </ul>
     </section>
-    <section class="section space" id="contact">
+    <section class="section" id="contact">
         <h2>Contact Us</h2>
         <form class="contact-form">
             <label for="name">Name</label>
@@ -54,9 +104,8 @@
         </form>
     </section>
     <footer>
-        <p>  &copy; 2025 GI Celebration. All rights reserved.</p>
+        <p>&copy; 2024 GI Celebration. All rights reserved.</p>
     </footer>
-    <script src="script.js"></script>
 </body>
 
 </html>
