bg image and logo and style

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/GI-bgRemove.png" type="image/x-icon">
     <title>GI Celebration</title>
 </head>
 
 <body>
-    <header>
+    <header class="sticky">
         <h1 class="text-gradient">GI Celebration</h1>
         <nav>
             <ul>
@@ -20,9 +21,9 @@
             </ul>
         </nav>
     </header>
-    <div class="hero space" id="home">
-        <h2>Welcome to GI Celebration</h2>
-        <p>For the event of your dream</p>
+    <div class="bg" id="home">
+        <!-- <h2>Welcome to GI Celebration</h2>
+        <p>For the event of your dream</p> -->
     </div>
     <section class="section space" id="about">
         <h2>About Us</h2>
